node-main/deps/v8/test/message/fail/import-as-reserved-word.out
*%(basename)s:5: SyntaxError: Unexpected reserved word
import { foo as import } from "mod";
                ^^^^^^
SyntaxError: Unexpected reserved word
